refactor: 커서 페이지네션 수정